# ComfyUI_srt2speech

./: GetSubtitleByIndex.py  GetSubtitleIndexByFilename.py  GetSubtitleIndexByFilename.py.bak  LICENSE  LoadMergedAudio.py  LoadMergedAudioใยั  MergeAllWave.py  MergeSavedWavWithDummy.py  MergeSavedWavWithDummy.py.bak  MergeSelectedAudioFiles.py  MergeSubtitleAudio.py  MergeWithDummySilence.py  README.md  SRT2SpeechNode.py  SaveWAVNodePadding.py  SaveWavNode.py  SaveWavNode.py.bak  Split All Subtitles Node.py  Split Subtitle Node.py  SplitAllSubtitlesNode.py.bak  SplitSRTSentencesNode.py  Subtitle Iterator Node.py  SubtitleIteratorNode.py  SubtitleIteratorNode.py.bak  __init__.py  comfyui_subtitle_ui.js  pyproject.toml  requirements.txt  shared_types.py
.github/workflows/: publish.yml
assets/: download TTS3 models workflow.json
assets/srt_uploads/: test-5min.srt  test2.srt
assets/wav-npy/: 00001.npy  00002.npy  00003.npy  00004.npy  00005.npy  00006.npy  00007.npy  00008.npy  00009.npy  00010.npy  00011.npy  00012.npy  00013.npy  00014.npy  00018.npy  iimate24.npy  snoopdog_rap.npy  test1.npy  test3.npy  新闻-噪音1.npy  范闲.npy
example_workflow/: srt2speech and MegaTTS3 workflow v2.json  srt2speech and MegaTTS3 workflow.json
web/: comfyui_subtitle_ui.js
